--- a/Ghostscript.NET/Ghostscript.NET.csproj
+++ b/Ghostscript.NET/Ghostscript.NET.csproj
@@ -1,13 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net8.0;net9.0</TargetFrameworks>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+	  <PackageId>Ghostscript.Core.NET</PackageId>
+	  <Title>Ghostscript.Core.NET</Title>
+	  <Authors>ArtifexSoftware forked by WorldWideWhat</Authors>
+	  <Description>Ghostscript .net core wrapper</Description>
+	  <PackageProjectUrl>https://github.com/WorldWideWhat/Ghostscript.NET</PackageProjectUrl>
+	  <PackageLicense>https://opensource.org/licenses/MIT</PackageLicense>
+	  <RepositoryUrl>https://github.com/WorldWideWhat/Ghostscript.NET</RepositoryUrl>
+	  <PackageTags>pdf ghostscript print printer prints printing core windows</PackageTags>
+	  <Version>1.0.0</Version>
+
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
