--- a/Ghostscript.NET/Ghostscript.NET.csproj
+++ b/Ghostscript.NET/Ghostscript.NET.csproj
@@ -12,12 +12,15 @@
 	  <RepositoryUrl>https://github.com/WorldWideWhat/Ghostscript.NET</RepositoryUrl>
 	  <PackageTags>pdf ghostscript print printer prints printing core windows</PackageTags>
 	  <Version>1.0.0</Version>
-
+	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
+	  <PackageReadmeFile>README.md</PackageReadmeFile>
+	  <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
-  <ItemGroup>
+
+	<ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
+		<None Include="README.md" pack="true" PackagePath="." />
   </ItemGroup>
-
 </Project>
