--- a/Ghostscript.NET.Samples/Ghostscript.NET.Samples.csproj
+++ b/Ghostscript.NET.Samples/Ghostscript.NET.Samples.csproj
@@ -15,6 +15,20 @@
     <FileVersion>1.2.3</FileVersion>
     <Platforms>x64</Platforms>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-windows|x64'">
+    <WarningLevel>8</WarningLevel>
+    <NoWarn>1701;1702;1416</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-windows|x64'">
+    <WarningLevel>8</WarningLevel>
+    <NoWarn>1701;1702;1416</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-windows|x64'">
+    <NoWarn>1701;1702;1416</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-windows|x64'">
+    <NoWarn>1701;1702;1416</NoWarn>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ghostscript.NET\Ghostscript.NET.csproj" />
   </ItemGroup>
